create comment router
