# backend/src/server.ts
@@ -4,6 +4,7 @@ import {UserInfoRouter} from './routers/UserInfoRouter';
 import {StoryRouter} from './routers/StoryRouter';
 import {LikeRouter} from './routers/LikeRouter';
 import {FollowRouter} from './routers/FollowRouter';
+import {CommentRouter} from './routers/CommentRouter';
 
 import Options from './database/dbconnector';
 import path from 'path';
@@ -22,22 +23,25 @@ class Server {
         this.swagger();
     }
 
-    private config() {
+    private async config() {
         // this.app.use(bodyParser.urlencoded({ extended:true }));
         // this.app.use(bodyParser.json({ limit: '1mb' })); // 100kb default
         this.app.use(express.json())
         this.app.enable('trust proxy')
+        await createConnection(Options);
     }
 
     public async routerConfig() {
-        await createConnection(Options);
         this.app.get('/', (req: Request, res: Response)=>{
             res.send('hello')
         })
+        
         this.app.use('/user', UserInfoRouter);
         this.app.use('/story', StoryRouter);
         this.app.use('/like', LikeRouter);
         this.app.use('/follow', FollowRouter);
+        this.app.use('/comment', CommentRouter);
+
     }
 
     private swaggerSpec = YAML.load(path.join(__dirname, '../build/swagger.yaml'))
