# backend/src/swagger/openapi.yaml
@@ -1,6 +1,7 @@
 openapi: '3.0.0'
 servers: 
-  - url: https://gipsa-solutionchallenge2022.du.r.appspot.com/
+  - url: https://gipsa-solutionchallenge2022.du.r.appspot.com
+  - url: http://34.64.244.115:8080
 info:
   description: This is a simple API
   version: "1.0.0"
@@ -71,7 +72,7 @@ paths:
       responses:
         default:
           description: successful operation
-  /user/:
+  /user:
     get:
       tags:
         - user
@@ -93,7 +94,7 @@ paths:
                   $ref: '#/components/schemas/UserInfo'
         '400':
           description: invalid
-  /like/:
+  /like:
     get:
       tags:
         - like
@@ -128,7 +129,7 @@ paths:
         default:
           description: successful operation
           
-  /follow/:
+  /follow:
     get:
       tags: 
         - follow
@@ -139,7 +140,7 @@ paths:
         schema:
           type: number
       - in: query
-        name: followedUserId
+        name: creatorId
         schema:
           type: number
       responses:
@@ -165,12 +166,37 @@ paths:
       responses:
         default:
           description: good
-                
+               
   /comment:
-    post:
+    get:
       tags:
         - comment
-      summary: 댓글 달기
+      summary: bring comments
+      parameters: 
+      - in: query
+        name: userId
+        schema:
+          type: number
+      - in: query
+        name: storyId
+        schema:
+          type: number
+      responses:
+        '200':
+          description: array of comments
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Comment'
+        '400':
+          description: invalid
+  /comment/create:
+    post:
+      tags: 
+        - comment
+      summary: 댓글 추가
       requestBody:
         content:
           application/json:
@@ -178,8 +204,7 @@ paths:
               $ref: '#/components/schemas/Comment'
       responses:
         default:
-          description: good
-
+          description: successful operation 
   /story/create:
     post:
       tags:
@@ -196,7 +221,7 @@ paths:
         default:
           description: successful operation
           
-  /story/:
+  /story:
     get:
       tags:
         - story
@@ -303,12 +328,16 @@ components:
       type: object
       required:
         - userId
+        - storyId
         - content
       properties:
         id:
           type: number
           format: int64
         userId:
+          type: number
+          format: int64
+        storyId:
           type: number
           format: int64
         content:
@@ -321,12 +350,12 @@ components:
       type: object
       required:
         - followerId
-        - followedUserId
+        - creatorId
       properties:
         followerId:
           type: number
           format: int64
-        followedUserId:
+        creatorId:
           type: number
           format: int64
     LikeEntity:
